--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,9 +1,11 @@
-spring.datasource.url=jdbc:mysql://localhost:3306/spring_course_db
+spring.datasource.url=jdbc:mysql://localhost:3306/spring_course_db?useSSL=false
 spring.datasource.username=root
 spring.datasource.password=root
 
-spring.datasource.driver-class-name=com.mysql.cj.jdbc.Driver
-spring.jpa.hibernate.ddl-auto=update
+#Jpa/Hibernate :
+spring.jpa.generate-ddl=true
 spring.jpa.show-sql=true
+spring.jpa.properties.hibernate.dialect = org.hibernate.dialect.MySQL5Dialect
+spring.jpa.hibernate.ddl-auto = update
 
 
